<resources>
    <string name="app_name">asas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_set">تنظیمات</string>
    <string name="menu_emtiaz">امتیاز دهید</string>
      <string name="menu_us">درباره ما و راه های ارتباطی</string>
    <string name="menu_res">منابع</string>
    <string name="menu_exit">خروج</string>
</resources>