<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_set"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_set" />
        <item
            android:id="@+id/nav_emtiaz"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_emtiaz" />
        <item
            android:id="@+id/nav_us"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_us" />

        <item
            android:id="@+id/nav_res"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_res"/>

        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_exit"/>
    </group>
</menu>