<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="@string/menu_set"
    app:startDestination="@+id/nav_set">

    <fragment
        android:id="@+id/nav_set"
        android:name="com.example.asas.ui.home.SetFragment"
        tools:layout="@layout/fragment_set" />

    <fragment
        android:id="@+id/nav_emtiaz"
        android:name="com.example.asas.ui.emtiazd_dahid.EmtiazFragment"
        android:label="@string/menu_emtiaz"
        tools:layout="@layout/fragment_emtiaz" />

    <fragment
        android:id="@+id/nav_us"
        android:name="com.example.asas.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_us"
        tools:layout="@layout/fragment_us" />


    <fragment
        android:id="@+id/nav_res"
        android:name="com.example.asas.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_res"
        tools:layout="@layout/fragment_res" />



    <fragment
        android:id="@+id/nav_exit"
        android:name="com.example.asas.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_exit"
        tools:layout="@layout/fragment_exit" />
</navigation>